--- a/app/Resources/views/contact/index.html.twig
+++ b/app/Resources/views/contact/index.html.twig
@@ -40,7 +40,7 @@
                         </li>
                         <li>
                             <i class="fab fa-internet-explorer"></i>
-                            <span><strong>www.xaydungkimanh.com</strong></span>
+                            <span><strong>www.suanhakimanh.com</strong></span>
                         </li>
                     </ul>
 
