--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -10,8 +10,8 @@
     {
         "@context": "http://schema.org",
         "@type": "Organization",
-        "url": "https://xaydungkimanh.com/",
-        "logo": "https://xaydungkimanh.com/assets/images/logo.png",
+        "url": "https://suanhakimanh.com/",
+        "logo": "https://suanhakimanh.com/assets/images/logo.png",
         "contactPoint": {
             "@type": "ContactPoint",
             "telephone": "+84 974776305",
@@ -26,10 +26,10 @@
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "https://xaydungkimanh.com/",
+        "url": "https://suanhakimanh.com/",
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://xaydungkimanh.com/search?q={search_term_string}",
+            "target": "https://suanhakimanh.com/search?q={search_term_string}",
             "query-input": "required name=search_term_string"
         }
     }
@@ -42,7 +42,7 @@
         "@context": "http://schema.org",
         "@type": "Person",
         "name": "Xây Dựng Kim Anh",
-        "url": "https://xaydungkimanh.com/",
+        "url": "https://suanhakimanh.com/",
         "sameAs": [
             "https://www.facebook.com/xaydungkimanh/",
             "https://twitter.com/xaydungkimanh",
