--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -19,17 +19,17 @@
                     </li>
                     <li>
                         <i class="fab fa-internet-explorer"></i>
-                        <span><a href="https://xaydungkimanh.com/">www.xaydungkimanh.com</a></span>
+                        <span><a href="https://suanhakimanh.com/">www.suanhakimanh.com</a></span>
                     </li>
                 </ul>
                 <div class="event-footer row">
                     <div class="col-12 col-sm-12 col-md-12">
                         <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="⭐Bảng giá sửa nhà trọn gói" itemprop="name">
-                            <meta content="⭐Bảng giá sửa nhà trọn gói" itemprop="description">
+                            <meta content="⭐⭐⭐ Bảng giá sửa nhà" itemprop="name">
+                            <meta content="⭐⭐⭐ Bảng giá sửa nhà" itemprop="description">
                             <h6>
                                 <a href="{{ path('news_show', {'slug': 'bao-gia-sua-chua-nha-moi-nhat' }) }}" itemprop="url">
-                                    <span>⭐Bảng giá sửa nhà trọn gói</span>
+                                    <span>⭐⭐⭐ Bảng giá sửa nhà</span>
                                 </a>
                             </h6>
                             <meta content="2021-09-09T4:00-05:00" itemprop="startDate">
@@ -58,15 +58,15 @@
                             </div>
                             <div itemprop="organizer" itemscope itemtype="http://schema.org/Organization">
                                 <meta content="Xây Dựng Kim Anh" itemprop="name">
-                                <meta content="https://xaydungkimanh.com/" itemprop="url">
+                                <meta content="https://suanhakimanh.com/" itemprop="url">
                             </div>
                         </div>
                         <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="⭐Bảng giá xây nhà trọn gói" itemprop="name">
-                            <meta content="⭐Bảng giá xây nhà trọn gói" itemprop="description">
+                            <meta content="⭐⭐⭐ Bảng giá xây nhà" itemprop="name">
+                            <meta content="⭐⭐⭐ Bảng giá xây nhà" itemprop="description">
                             <h6>
                                 <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi-moi-nhat' }) }}" itemprop="url">
-                                    <span>⭐Bảng giá xây nhà trọn gói</span>
+                                    <span>⭐⭐⭐ Bảng giá xây nhà</span>
                                 </a>
                             </h6>
                             <meta content="2021-10-10T5:00-05:00" itemprop="startDate">
@@ -95,15 +95,15 @@
                             </div>
                             <div itemprop="organizer" itemscope itemtype="http://schema.org/Organization">
                                 <meta content="Xây Dựng Kim Anh" itemprop="name">
-                                <meta content="https://xaydungkimanh.com/" itemprop="url">
+                                <meta content="https://suanhakimanh.com/" itemprop="url">
                             </div>
                         </div>
                         <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="⭐Bảng giá xây nhà phần thô" itemprop="name">
-                            <meta content="⭐Bảng giá xây nhà phần thô" itemprop="description">
+                            <meta content="⭐⭐⭐ Bảng giá xây thô" itemprop="name">
+                            <meta content="⭐⭐⭐ Bảng giá xây thô" itemprop="description">
                             <h6>
                                 <a href="{{ path('news_show', {'slug': 'bang-bao-gia-xay-nha-phan-tho-moi-nhat' }) }}" itemprop="url">
-                                    <span>⭐Bảng giá xây nhà phần thô</span>
+                                    <span>⭐⭐⭐ Bảng giá xây thô</span>
                                 </a>
                             </h6>
                             <meta content="2021-11-11T6:00-05:00" itemprop="startDate">
@@ -132,7 +132,7 @@
                             </div>
                             <div itemprop="organizer" itemscope itemtype="http://schema.org/Organization">
                                 <meta content="Xây Dựng Kim Anh" itemprop="name">
-                                <meta content="https://xaydungkimanh.com/" itemprop="url">
+                                <meta content="https://suanhakimanh.com/" itemprop="url">
                             </div>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
         </div>
         <div class="row copyright">
             <div class="col-sm-12 text-center">
-                <p>Copyright © {{ "now"|date('Y') }} <a href="https://xaydungkimanh.com" title="Xây Dựng Kim Anh">Xây Dựng Kim Anh</a>, all rights reserved.</p>
+                <p>Copyright © {{ "now"|date('Y') }} <a href="https://suanhakimanh.com" title="Xây Dựng Kim Anh">Xây Dựng Kim Anh</a>, all rights reserved.</p>
             </div>
         </div>
     </div>
