--- a/app/Resources/views/layout/header.html.twig
+++ b/app/Resources/views/layout/header.html.twig
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-8 col-md-6 marquee">
-                <marquee scrollamount="7">Xây Dựng Kim Anh: <span>Miễn phí 100% chi phí thiết kế</span> khi ký hợp đồng thi công xây nhà phần thô. <span>Miễn phí 100% chi phí thiết kế</span>, bao giấy phép khi xây nhà trọn gói. <span>Giảm từ 80% - 100% chi phí thiết kế</span> khi sửa nhà trọn gói. Hotline: 0974.776.305 (Mr Tuấn)</marquee>
+                {{ get_setting('linkToLinkedin')|raw }}
             </div>
             <div class="col-12 col-sm-4 col-md-6 text-right header-social hidden-xs">
                 <div class="skew-divider"></div>
