--- a/app/Resources/views/amp/amp-theme/index.html.twig
+++ b/app/Resources/views/amp/amp-theme/index.html.twig
@@ -39,9 +39,9 @@
             <script type="application/json">
             {
                 "vars" : {
-                    "gtag_id": "UA-96046064-1",
+                    "gtag_id": "G-SDCF20F3HZ",
                     "config" : {
-                        "UA-96046064-1": { "groups": "default" }
+                        "G-SDCF20F3HZ": { "groups": "default" }
                     }
                 }
             }
@@ -290,6 +290,9 @@
                                 </li>
                                 <li>
                                     <a href="{{ path('news_category', {'level1': 'phong-thuy-xay-dung' }) }}" title="Phong thủy xây dựng">Phong thủy xây dựng</a>
+                                </li>
+                                <li>
+                                    <a href="https://xaydungkimanh.com/bao-gia-xay-nha-tron-goi-moi-nhat.html" title="Xây nhà trọn gói">Xây nhà trọn gói</a>
                                 </li>
                             </ul>
                         </div>
