--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -159,6 +159,9 @@
                     <li>
                         <a href="{{ path('news_category', {'level1': 'phong-thuy-xay-dung' }) }}" title="Phong thủy xây dựng">Phong thủy xây dựng</a>
                     </li>
+                    <li>
+                        <a href="https://xaydungkimanh.com/bao-gia-xay-nha-tron-goi-moi-nhat.html" title="Xây nhà trọn gói">Xây nhà trọn gói</a>
+                    </li>
                 </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-3 col-lg-3">
