--- a/app/Resources/views/layout/header.html.twig
+++ b/app/Resources/views/layout/header.html.twig
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-8 col-md-6 marquee">
-                {{ get_setting('linkToLinkedin')|raw }}
+                {{ get_setting('marqueeHomepage')|raw }}
             </div>
             <div class="col-12 col-sm-4 col-md-6 text-right header-social hidden-xs">
                 <div class="skew-divider"></div>
