--- a/app/Resources/views/news/components/related.html.twig
+++ b/app/Resources/views/news/components/related.html.twig
@@ -9,6 +9,8 @@
                             <div class="related-wrapper">
                                 <div class="related-img">
                                     <img
+                                        width="203"
+                                        height="140"
                                         class="img-thumbnail lazyload"
                                         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                                         data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') }}"
@@ -45,8 +47,11 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <div class="related-wrapper video-related">
                         <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/76AB9uOFBos?rel=0&showinfo=0&autoplay=1">
-                            <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                            <img
+                                src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                                 data-src="https://img.youtube.com/vi/76AB9uOFBos/hqdefault.jpg"
+                                width="277"
+                                height="208"
                                 async
                                 class="play-youtube-video lazyload"
                                 alt="Khách hàng hạnh phúc chia sẻ về Xây Dựng Kim Anh">
@@ -56,8 +61,11 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <div class="related-wrapper video-related">
                         <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/qZHPIqGX7pA?rel=0&showinfo=0&autoplay=1">
-                            <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                            <img
+                                src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                                 data-src="https://img.youtube.com/vi/qZHPIqGX7pA/hqdefault.jpg"
+                                width="277"
+                                height="208"
                                 async
                                 class="play-youtube-video lazyload"
                                 alt="Ý kiến khách hàng về Xây Dựng Kim Anh">
@@ -67,8 +75,11 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <div class="related-wrapper video-related">
                         <div class="youtube-video-place embed-responsive embed-responsive-4by3" data-yt-url="https://www.youtube.com/embed/Jw70fD5eZp4?rel=0&showinfo=0&autoplay=1">
-                            <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                            <img
+                                src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                                 data-src="https://img.youtube.com/vi/Jw70fD5eZp4/hqdefault.jpg"
+                                width="277"
+                                height="208"
                                 async
                                 class="play-youtube-video lazyload"
                                 alt="Ý kiến khách hàng về Xây Dựng Kim Anh">
