--- a/app/Resources/views/news/hot.html.twig
+++ b/app/Resources/views/news/hot.html.twig
@@ -9,6 +9,8 @@
                     <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" class="list-group-item td-list-group-item" title="{{ row.getTitle() }}">
                         <img
                             alt="{{ row.getTitle() }}"
+                            width="70"
+                            height="50"
                             class="img-responsive lazyload"
                             src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                             data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_70_50') }}" />
