--- a/web/assets/scss/front/pages/_homepage.scss
+++ b/web/assets/scss/front/pages/_homepage.scss
@@ -200,7 +200,6 @@
         .col-md-3 {
             margin: 20px 0;
             
-            /* Small Devices, Tablets */
             @media only screen and (max-width : 768px) {
                 margin: 5px 0;
             }
@@ -267,6 +266,12 @@
                                 &:hover {
                                     transform: scale(1.4);
                                 }
+
+                                @media only screen and (max-width : 768px) {
+                                    &:hover {
+                                        transform: none;
+                                    }
+                                }
                             }
                         }
                     }
@@ -280,6 +285,8 @@
 
                     @media only screen and (max-width : 767.98px) {
                         padding: 15px 25px;
+                        line-height: 30px;
+                        font-size: 24px;
                     }
 
                     @media (min-width: 768px) and (max-width: 991.98px) {
