--- a/web/assets/scss/front/pages/_news.scss
+++ b/web/assets/scss/front/pages/_news.scss
@@ -217,6 +217,14 @@
 
             &.video-related {
                 margin-bottom: 10px;
+
+                .youtube-video-place {
+                    @media only screen and (max-width: 767.98px) {
+                        img {
+                            width: 100%;
+                        }
+                    }
+                }
             }
 
             &:hover {
@@ -248,8 +256,12 @@
                     padding: 0px;
                     border: none;
                     width: 100%;
-                    height: 100%;
+                    height: 140px;
                     transition: 0.6s ease;
+
+                    @media only screen and (max-width: 767.98px) {
+                        height: 100%;
+                    }
                 }
 
                 a {
@@ -316,7 +328,9 @@
 
                 @media only screen and (max-width: 767.98px) {
                     height: auto;
-                    font-size: 18px;
+                    font-size: 20px;
+                    max-height: 50px;
+                    line-height: 26px;
                 }
             }
 
@@ -436,6 +450,7 @@
                 border-width: 1px;
                 height: 40px;
                 padding: 5px 15px;
+                box-shadow: none;
 
                 &.error {
                     border: 1px solid $red;
@@ -443,8 +458,22 @@
                 }
             }
 
+            input {
+                width: 350px;
+
+                @media only screen and (max-width: 767.98px) {
+                    width: 100%;
+                }
+            }
+
             textarea.form-control {
-                height: 100px;
+                width: 500px;
+                height: 150px;
+                resize: none;
+
+                @media only screen and (max-width: 767.98px) {
+                    width: 100%;
+                }
             }
 
             label.error {
