--- a/web/assets/scss/front/pages/_homepage.scss
+++ b/web/assets/scss/front/pages/_homepage.scss
@@ -395,6 +395,12 @@
                 width: 282px;
                 height: 220px;
 
+                img {
+                    @media only screen and (max-width : 768px) {
+                        width: 100%;
+                    }
+                }
+
                 iframe {
                     height: 97%;
                 }
