--- a/app/Resources/views/admin/news/index.html.twig
+++ b/app/Resources/views/admin/news/index.html.twig
@@ -56,7 +56,7 @@
                                             {% endfor %}
                                         </td>
                                         <td>
-                                            <label class="switch switch-text switch-primary switch-pill">
+                                            <label class="switch switch-text switch-primary switch-pill" data-url="">
                                                 <input type="checkbox" class="switch-input" {{ row.getEnable() ? 'checked="true"' : '' }}>
                                                 <span data-on="On" data-off="Off" class="switch-label"></span>
                                                 <span class="switch-handle"></span>
