--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -192,11 +192,11 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12 title-list-news-items">
-                                <h1 class="text-center text-uppercase">
+                                <div class="text-center text-uppercase title-list-news-items-h1">
                                     <img alt="{{ blockOnHomepage.category.getName() }}" src="{{ asset('assets/images/icon-logo.png') }}" width="35" height="23" />
                                     <span>Kim </span> Anh <i class="fas fa-angle-right"></i> 
                                     {{ blockOnHomepage.category.getName() }}
-                                </h1>
+                                </div>
                                 <p>{{ blockOnHomepage.description }}</p>
                             </div>
 
@@ -215,11 +215,11 @@
                     <div class="container">
                         <div class="row project-hot">
                             <div class="col-md-12 title-list-news-items">
-                                <h1 class="text-center text-uppercase">
+                                <div class="text-center text-uppercase title-list-news-items-h1">
                                     <img alt="{{ blockOnHomepage.category.getName() }}" src="{{ asset('assets/images/icon-logo.png') }}" width="35" height="23" />
                                     <span>Kim </span> Anh <i class="fas fa-angle-right"></i> 
                                     {{ blockOnHomepage.category.getName() }}
-                                </h1>
+                                </div>
                                 <p>{{ blockOnHomepage.description }}</p>
                             </div>
 
