--- a/web/assets/scss/front/component/_newsgrid.scss
+++ b/web/assets/scss/front/component/_newsgrid.scss
@@ -1,5 +1,5 @@
 .title-list-news-items {
-    h1 {
+    .title-list-news-items-h1 {
         font-size: 32px;
         margin: 10px 0 15px;
         color: #0053a5;
