--- a/app/Resources/views/amp/amp-theme/related.html.twig
+++ b/app/Resources/views/amp/amp-theme/related.html.twig
@@ -9,7 +9,7 @@
                             <div class="related-wrapper">
                                 <div class="related-img">
                                     {% if category is defined %}
-                                        <a href="{{ path('amp_show', {'slug': row.getUrl(), 'danh-muc': category.getUrl() }) }}" title="{{ row.getTitle() }}">
+                                        <a href="{{ path('news_show', {'slug': row.getUrl(), 'danh-muc': category.getUrl() }) }}" title="{{ row.getTitle() }}">
                                             <amp-img
                                                 alt="{{row.getTitle()}}"
                                                 src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') }}"
@@ -20,7 +20,7 @@
                                             </amp-img>
                                         </a>
                                     {% else %}
-                                        <a href="{{ path('amp_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
+                                        <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
                                             <amp-img
                                                 alt="{{row.getTitle()}}"
                                                 src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') }}"
@@ -33,11 +33,11 @@
                                     {% endif %}
                                 </div>
                                 {% if category is defined %}
-                                    <a class="related-title" href="{{ path('amp_show', {'slug': row.getUrl(), 'danh-muc': category.getUrl() }) }}" title="{{ row.getTitle() }}">
+                                    <a class="related-title" href="{{ path('news_show', {'slug': row.getUrl(), 'danh-muc': category.getUrl() }) }}" title="{{ row.getTitle() }}">
                                         {{ row.getTitle() }}
                                     </a>
                                 {% else %}
-                                    <a class="related-title" href="{{ path('amp_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
+                                    <a class="related-title" href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
                                         {{ row.getTitle() }}
                                     </a>
                                 {% endif %}
@@ -108,6 +108,51 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <br>
+            <h3>{{ 'news.news_related'|trans }}</h3>
+            <div class="row">
+                {% for row in relatedNews %}
+                    <div class="col-xs-12 col-sm-4 col-md-3">
+                        <div class="related-wrapper">
+                            <div class="related-img">
+                                {% if category is defined %}
+                                    <a href="{{ path('news_show', {'slug': row.getUrl(), 'danh-muc': category.getUrl() }) }}" title="{{ row.getTitle() }}">
+                                        <amp-img
+                                            alt="{{row.getTitle()}}"
+                                            src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') }}"
+                                            width="406"
+                                            height="280"
+                                            layout="responsive"
+                                        >
+                                        </amp-img>
+                                    </a>
+                                {% else %}
+                                    <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
+                                        <amp-img
+                                            alt="{{row.getTitle()}}"
+                                            src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') }}"
+                                            width="406"
+                                            height="280"
+                                            layout="responsive"
+                                        >
+                                        </amp-img>
+                                    </a>
+                                {% endif %}
+                            </div>
+                            {% if category is defined %}
+                                <a class="related-title" href="{{ path('news_show', {'slug': row.getUrl(), 'danh-muc': category.getUrl() }) }}" title="{{ row.getTitle() }}">
+                                    {{ row.getTitle() }}
+                                </a>
+                            {% else %}
+                                <a class="related-title" href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
+                                    {{ row.getTitle() }}
+                                </a>
+                            {% endif %}
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
         </div>
     {% endif %}
