--- a/app/Resources/views/layout/slide.html.twig
+++ b/app/Resources/views/layout/slide.html.twig
@@ -10,6 +10,29 @@
         </ol>
         <div class="carousel-inner">
             <div class="item active">
+                <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi-moi-nhat'}) }}">
+                    <picture>
+                        <source
+                            data-srcset="{{ asset('assets/images/banner/xuan-2022.jpg') | imagine_filter('banner_768_400') }}"
+                            media="(max-width: 799px)" />
+                        <source
+                            data-srcset="{{ asset('assets/images/banner/xuan-2022.jpg') | imagine_filter('banner_1500_500') }}"
+                            media="(min-width: 800px)" />
+                        <img
+                            src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                            data-src="{{ asset('assets/images/banner/xuan-2022.jpg') | imagine_filter('banner_1500_500') }}"
+                            alt="Xây Dựng Kim Anh mừng xuân 2022"
+                            class="lazyload" />
+                    </picture>
+                </a>
+                <div class="container">
+                    <div class="carousel-caption text-left">
+                        <h2 class="text-uppercase">Xây Dựng Kim Anh</h2>
+                        <p>Mừng xuân 2022 cùng ưu đãi đặc biệt</p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
                 <a href="{{ path('news_show', {'slug': 'bang-bao-gia-xay-nha-phan-tho-moi-nhat'}) }}">
                     <picture>
                         <source
@@ -95,29 +118,6 @@
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h2 class="text-uppercase">Công Ty Nhà Thầu Xây Dựng Kim Anh</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <a href="{{ path('homepage') }}">
-                    <picture>
-                        <source
-                            data-srcset="{{ asset('assets/images/banner/nha-thau-xay-dung-kim-anh.jpg') | imagine_filter('banner_768_400') }}"
-                            media="(max-width: 799px)" />
-                        <source
-                            data-srcset="{{ asset('assets/images/banner/nha-thau-xay-dung-kim-anh.jpg') | imagine_filter('banner_1500_500') }}"
-                            media="(min-width: 800px)" />
-                        <img
-                            src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                            data-src="{{ asset('assets/images/banner/nha-thau-xay-dung-kim-anh.jpg') | imagine_filter('banner_1500_500') }}"
-                            alt="Xây Dựng Kim Anh"
-                            class="lazyload" />
-                    </picture>
-                </a>
-                <div class="container">
-                    <div class="carousel-caption text-left">
-                        <h2 class="text-uppercase">Xây Dựng Kim Anh</h2>
-                        <p>Thương hiệu của uy tín và chất lượng</p>
                     </div>
                 </div>
             </div>
