--- a/app/Resources/views/news/listByCategory.html.twig
+++ b/app/Resources/views/news/listByCategory.html.twig
@@ -1,10 +1,10 @@
 <div class="row project-hot">
     <div class="col-md-12 title-list-news-items">
-        <h1 class="text-center text-uppercase">
+        <div class="text-center text-uppercase title-list-news-items-h1">
             <img alt="Dự án nổi bật" src="{{ asset('assets/images/icon-logo.png') }}" />
             <span>Kim </span> Anh <i class="fas fa-angle-right"></i> 
             Dự án nổi bật
-        </h1>
+        </div>
         <p>Với nỗ lực lao động, học hỏi không ngừng nghỉ, chúng tôi đã mang đến những sản phẩm độc đáo, đột phá với những yếu cầu từ quý khách hàng đã tin tưởng đến chúng tôi.</p>
     </div>
     
