--- a/app/Resources/views/layout/slide.html.twig
+++ b/app/Resources/views/layout/slide.html.twig
@@ -13,14 +13,14 @@
                 <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi-moi-nhat'}) }}">
                     <picture>
                         <source
-                            data-srcset="{{ asset('assets/images/banner/xuan-2022.jpg') | imagine_filter('banner_768_400') }}"
+                            data-srcset="{{ asset('assets/images/banner/xuan-2023-1.jpg') | imagine_filter('banner_768_400') }}"
                             media="(max-width: 799px)" />
                         <source
-                            data-srcset="{{ asset('assets/images/banner/xuan-2022.jpg') | imagine_filter('banner_1500_500') }}"
+                            data-srcset="{{ asset('assets/images/banner/xuan-2023-1.jpg') | imagine_filter('banner_1500_500') }}"
                             media="(min-width: 800px)" />
                         <img
                             src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                            data-src="{{ asset('assets/images/banner/xuan-2022.jpg') | imagine_filter('banner_1500_500') }}"
+                            data-src="{{ asset('assets/images/banner/xuan-2023-1.jpg') | imagine_filter('banner_1500_500') }}"
                             alt="Xây Dựng Kim Anh mừng xuân 2022"
                             class="lazyload" />
                     </picture>
@@ -28,7 +28,31 @@
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h2 class="text-uppercase">Xây Dựng Kim Anh</h2>
-                        <p>Mừng xuân 2022 cùng ưu đãi đặc biệt</p>
+                        <p>Mừng xuân 2023 cùng nhiều ưu đãi đặc biệt</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="item">
+                <a href="{{ path('homepage') }}">
+                    <picture>
+                        <source
+                            data-srcset="{{ asset('assets/images/banner/cong-ty-xay-dung-kim-anh.jpg') | imagine_filter('banner_768_400') }}"
+                            media="(max-width: 799px)" />
+                        <source
+                            data-srcset="{{ asset('assets/images/banner/cong-ty-xay-dung-kim-anh.jpg') | imagine_filter('banner_1500_500') }}"
+                            media="(min-width: 800px)" />
+                        <img
+                            src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                            data-src="{{ asset('assets/images/banner/cong-ty-xay-dung-kim-anh.jpg') | imagine_filter('banner_1500_500') }}"
+                            alt="Công ty xây dựng uy tín"
+                            class="lazyload" />
+                    </picture>
+                </a>
+                <div class="container">
+                    <div class="carousel-caption text-left">
+                        <h2 class="text-uppercase">Xây Dựng Kim Anh</h2>
+                        <p>Công ty xây dựng uy tín số 1 tại TP HCM</p>
                     </div>
                 </div>
             </div>
@@ -96,28 +120,6 @@
                     <div class="carousel-caption text-left">
                         <h2 class="text-uppercase">Xây Dựng Kim Anh</h2>
                         <p>Chuyên thiết kế thi công nhà phố, biệt thự</p>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <a href="{{ path('homepage') }}">
-                    <picture>
-                        <source
-                            data-srcset="{{ asset('assets/images/banner/xay-dung-kim-anh.jpg') | imagine_filter('banner_768_400') }}"
-                            media="(max-width: 799px)" />
-                        <source
-                            data-srcset="{{ asset('assets/images/banner/xay-dung-kim-anh.jpg') | imagine_filter('banner_1500_500') }}"
-                            media="(min-width: 800px)" />
-                        <img
-                            src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                            data-src="{{ asset('assets/images/banner/xay-dung-kim-anh.jpg') | imagine_filter('banner_1500_500') }}"
-                            alt="Công Ty Nhà Thầu Xây Dựng Kim Anh"
-                            class="lazyload" />
-                    </picture>
-                </a>
-                <div class="container">
-                    <div class="carousel-caption text-left">
-                        <h2 class="text-uppercase">Công Ty Nhà Thầu Xây Dựng Kim Anh</h2>
                     </div>
                 </div>
             </div>
